# COURSE-computer-graphics

./: .gitignore  CMakeLists.txt  LICENSE  README.md
A-3-PhysicsCollision/msvc/: UpgradeLog.XML  UpgradeLog.htm  physics.opensdf  physics.sln  physics.vcxproj  physics.vcxproj.filters
A-3-PhysicsCollision/scenes/: newtons_cradle.scene  pool.scene  rotation_test.scene  spring_rotation.scene
A-3-PhysicsCollision/src/physics/: body.hpp  collisions.cpp  physics.cpp  physics.hpp  planebody.cpp  spherebody.cpp  spherebody.hpp  spring.cpp  trianglebody.cpp
A-4-LoopSubdivision/: CMakeLists.txt
A-4-LoopSubdivision/assets/meshs/: cube.1.mesh
A-4-LoopSubdivision/assets/shaders/: terrian.tcs
A-4-LoopSubdivision/include/: Camera.hpp  GUI.hpp  LoopSubdivision.h  Mesh.hpp  Scene.hpp  SmileBox.hpp  Terrian.hpp  Window.hpp  halfEdge_structure.h  memory.h  uuid.hpp  zyMesh.h
A-4-LoopSubdivision/include/Object/: GUIHandlerObject.hpp  RenderableObject.hpp  UpdatableObject.hpp
A-4-LoopSubdivision/include/framework/: Camera.hpp  GUI.hpp  Object.hpp  Shader.hpp  Texture.hpp  Window.hpp
A-4-LoopSubdivision/include/util/: memory.h  raii.hpp  stb_image.h
A-4-LoopSubdivision/src/: main.cpp
A-5-RayTracing/: .gitignore
A-5-RayTracing/raytrace_hw/: bmp.cpp  bmp.h  color.h  light.cpp  main.cpp  primitive.cpp  primitive.h  raytrace_hw.vcxproj  raytrace_hw.vcxproj.filters  raytracer.cpp  raytracer.h  scene.txt  vector3.cpp  vector3.h
A-6-TerrianEngine/: CMakeLists.txt
A-6-TerrianEngine/assets/: 3.3.shader.fs  5.1.framebuffers_screen.fs  5.1.framebuffers_screen.vs  5.1.transform.fs  8.3.gpuheight.fs  8.3.gpuheight.tes  8.3.gpuheight.vs  skybox.fs  skybox.vs  terrian.fs  terrian.vs
A-6-TerrianEngine/assets/shaders/: skybox.fs  skybox.vs  terrian.tes
A-6-TerrianEngine/include/: Camera.hpp  GUI.hpp  Shader.hpp  SkyBox.hpp  SmileBox.hpp  Terrian.hpp  Texture.hpp  Window.hpp  structure.h
A-6-TerrianEngine/include/Object/: BaseObject.hpp  KeyboardListenerObject.hpp
A-6-TerrianEngine/src/: main.cpp
B-5-SnowParticle/: CMakeLists.txt
B-5-SnowParticle-my/assets/: render.vs
B-5-SnowParticle-my/assets/Shaders/: Render.fs  Update.gs  floor.fs  floor.vs
B-5-SnowParticle-my/include/: Camera.hpp  Camera.hpp.my  Shader.hpp  SkyBox.hpp  Snow.hpp  SnowSystem.hpp  Texture.hpp  Window.hpp
B-5-SnowParticle-my/include/Object/: KeyboardListenerObject.hpp
B-5-SnowParticle-my/src/: main.cpp
B-5-SnowParticle/assets/: shader.vs  update.gs  update.vs
B-5-SnowParticle/assets/Shaders/: Update.gs
B-5-SnowParticle/include/: Camera.h  GUI.hpp  Shader.hpp  Snow.h  SnowSystem.hpp  Texture.hpp  Window.hpp  floor.h  random.h  shader.h  texture.h
B-5-SnowParticle/include/Object/: CallableObject.hpp
B-5-SnowParticle/src/: Snow.cpp  floor.cpp  main.cpp  shader.cpp  texture.cpp
C-1-SimpleTriangle/: CMakeLists.txt
C-1-SimpleTriangle/include/: GUI.hpp  Shader.hpp
C-1-SimpleTriangle/src/: main.cpp
C-3-pyramid/: CMakeLists.txt
C-3-pyramid/assets/: 4.2.shader.fs  6.2.coordinate_systems.vs  8.3.gpuheight.fs  skybox.fs  skybox.vs
C-3-pyramid/include/: Callbackable.hpp  Camera.hpp  DrawableObject.hpp  GUI.hpp  Shader.hpp  SkyBox.hpp  Terrian.hpp  Window.hpp
C-3-pyramid/include/Object/: KeyboardListenerObject.hpp
C-3-pyramid/src/: main.cpp
TerrainEngine/: CMakeLists.txt
TerrainEngine/include/: Camera.hpp  GUI.hpp  Input.hpp  ScreenSpaceShader.hpp  Vector3D.hpp  Window.hpp  drawableObject.hpp  log.h  model.hpp  shader.hpp  utils.hpp
TerrainEngine/src/: BaseShader.cpp  Skybox.cpp  Window.cpp  drawableObject.cpp  main.cpp  shader.cpp  utils.cpp
TerrainEngine/trash/include/: GUI.hpp  ScreenSpaceShader.hpp  Skybox.hpp  buffers.hpp  drawableObject.hpp  sceneElements.hpp  texture.hpp
TerrainEngine/trash/src/: GUI.cpp  Skybox.cpp  buffers.cpp  drawableObject.cpp  texture.cpp
